Fix benefits on small screen sizes

--- a/code/styles/components/_benefits.scss
+++ b/code/styles/components/_benefits.scss
@@ -1,17 +1,22 @@
 .benefits {
   align-items: center;
   display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+  @include susy-breakpoint($bp-xl) {
+    flex-direction: row;
+  }
 
   &__cost {
-
-    @include susy-breakpoint($bp-md) {
-      @include span(4);
-      @include squish(1);
-    }
-
     &__text {
       color: $white;
-      font-size: 2.4rem;
+      font-size: 1.4rem;
+      text-align: center;
+      @include susy-breakpoint($bp-sm) {
+        font-size: 2.4rem;
+        text-align: left;
+      }
       margin-bottom: 0;
       max-width: 8em;
 
@@ -29,14 +34,21 @@
   &__list {
     margin-bottom: 0;
 
-    @include susy-breakpoint($bp-md) {
-      @include span(6);
-      @include last;
-    }
-
     &__item {
       color: $lavender;
-      font-size: 1.2rem;
+      font-size: 1rem;
+      margin: $spacing-vertical-xs 0;
+      text-align: center;
+      &:last-child {
+        margin-bottom: 0;
+      }
+
+      @include susy-breakpoint($bp-sm) {
+        font-size: 1.2rem;
+        margin-bottom: 0;
+        text-align: left;
+      }
+
 
       &__highlight {
         color: $white;
